# qcc

./: .clang-format  CMakeLists.txt  README.md  run_and_debug.sh  run_and_exec.sh  run_test.sh
examples/: add.c  pointer.c  struct.c
src/cmd/: CMakeLists.txt  main.cpp
src/qcc/: CMakeLists.txt  allocator.cpp  allocator.hpp  arena.hpp  asm.cpp  asm.hpp  ast.cpp  ast.hpp  common.hpp  error.hpp  escape_sequence.cpp  escape_sequence.hpp  expression.hpp  fwd.hpp  object.cpp  object.hpp  operators.cpp  operators.hpp  parser.cpp  parser.hpp  precedence.cpp  precedence.hpp  preprocess.cpp  preprocess.hpp  regex.hpp  source.hpp  source_snippet.cpp  source_snippet.hpp  statement.cpp  statement.hpp  type_system.cpp  type_system.hpp  x86.cpp  x86.hpp
src/qcc/regex/: format.cpp  format.hpp  match.cpp  match.hpp  node.cpp  node.hpp  parser.cpp  parser.hpp  state.cpp  state.hpp
src/qcc/scan/: scanner.cpp  scanner.hpp  syntax_map.cpp  syntax_map.hpp  token.hpp
src/test/: CMakeLists.txt  main.cpp  regex_test.hpp  scan_test.hpp  x86_test.hpp
test/: add.c  array.c  binary_assignment.c  header.c  header.h  mul.c  pointer.c  precedence.c  struct.c  use_ranges.c
